test_case/rust-lang_rust/52959_410382119_11.rs
\nfn bar(x: &mut i32) {}\nfn foo(a: &mut i32) e it is also borrowed as immutable\n  --> /checkout/src/test/ui/borrowck/borrowck-slice-pattern-element-loan.rs:58:23\n   |\nLL |     if let [.., _, ref from_end4, ref from_end3, _, ref from_end1] = *s {\n   |                                   ------------- immutable borrow occurs here\n...\nLL |         if let [_, _, ref mut from_begin2, ..] = *s { //~ERROR\n   |                       ^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here\nLL |             nop(&[from_begin2, from_end1, from_end3, from_end4]);\n   |                                           --------- borrow used here in later iteration of loop\n\n"}
[00:43:19] {"message":"cannot borrow `s[..]` as mutable because it is also borrowed as immutable","code":{"code":"E0502","explanation":"\nThis error indicates that you are trying to borrow a variable as mutable when it\nhas already been borrowed as immutable.\n\nExample of erroneous code:\n\n